<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bringup</name>
  <version>0.0.0</version>
  <description>Leeds Gryphon Racing AI bringup package</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>velodyne</depend>
  <depend>zed_wrapper</depend>
  <depend>zed_components</depend>
  <depend>zed_ros2</depend>
  <depend>zed_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
